* Added support for USB-based install of Striker on Asus EeeBox appliances. * Fixed a bug where all LSI-based disks in an array were marked as not being assigned to a logical disk when there were. * Cleaned up the logging of LSI-based processing.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -96,8 +96,8 @@ scancore::db::2::initialize		=	1
 # 
 # If you want to disable this automatic shutdown feature, you can do so by 
 # setting these variables to '1'.
-scancore::disable::power_shutdown	=	0
-scancore::disable::thermal_shutdown	=	0
+#scancore::disable::power_shutdown	=	0
+#scancore::disable::thermal_shutdown	=	0
 
 
 ###############################
@@ -158,7 +158,7 @@ scancore::disable::thermal_shutdown	=	0
 # critical threshold, or below their low critical threshold, and add up their
 # weights. If the total value is equal to or greater than this shutdown limit,
 # ScanCore will initiate a withdrawl and power down of the node.
-scancore::temperature::shutdown_limit	=	5
+#scancore::temperature::shutdown_limit	=	5
 
 # When a node goes into thermal shutdown, many of it's temperature (and other)
 # sensors go offline. So a dashboard has a limited ability to determine if it
