--- a/striker.conf
+++ b/striker.conf
@@ -399,6 +399,11 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA"
 
 ### Variables
 #
+# This is set to '1' when you want to enable this feature. When using 
+# auto-encryption, be careful to only enable this when there is low risk of a
+# user accidentally inserting a USB drive they don't want reformated!
+remote-usb::enable_remote_usb_mount	=	1
+
 # When it's time to mount the local USB drive's mount point on a remote
 # machine, we need to pass credentials to the remote machine in order for it
 # to connect to this machine.
@@ -409,36 +414,50 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA"
 # NOTE: If you use a host name, make sure the remote machine can resolve it to
 #       an IP address!
 # 
-local::host			=	10.255.4.3
-local::user			=	root
-local::password			=	secret
+# The local 'mount' will have the USB device address appended to it. If the 
+# mounted filesystem has a label, that will be appended after the USB address
+# as well.
+# 
+remote-usb::local::host			=	10.255.4.3
+remote-usb::local::user			=	root
+remote-usb::local::password		=	secret
+remote-usb::local::mount		=	/mnt/remote
 
-# This is set to '1' when you want to enable this feature. When using 
-# auto-encryption, be careful to only enable this when there is low risk of a
-# user accidentally inserting a USB drive they don't want reformated!
-local::enable_remote_usb_mount	=	1
+# This configured which remote host to mount the USB drive on. Note that
+# because of how sshfs works, only the user set below will be able to access
+# the mount point.
+# 
+# NOTE: Be sure that the local machine can resolve the 'host' name to an IP.
+#       As above, it is usually safest to use an IP address directly.
+#
+# The remote 'mount' will have the same appended suffix as the local mount.
+# 
+remote-usb::remote::host		=	10.255.6.1
+remote-usb::remote::user		=	root
+remote-usb::remote::password		=	secret
+remote-usb::remote::mount		=	/mnt/remote
 
 # It is possible to decrypt LUKS-encrypted partition, provided the LUKS key is
 # provided. At this time, only one global LUKS key is supported. Enter it in
 # the following variable.
-luks::passphrase		=	supersecret
+remote-usb::luks::passphrase		=	supersecret
 
 # If the partition is not 'ext4' or if it's not encrypted, setting this to '1'
 # will cause the drive to be reformatted and encrypted without prompt. This
 # should only be enabled in very specific circumstances. If used, be sure to
 # warn users that their drives will be reformatted if they plug them into a
 # managed port and they are not encrupted!
-luks::force_initialize		=	1
+remote-usb::luks::force_initialize	=	1
 
 # This tells us what file system to create on the decrypted device mapper
 # device after we created the LUKS encrypted partition.
-luks::use_filesystem		=	ext4
+remote-usb::luks::use_filesystem	=	ext4
 
 # Set this below if you want to define a specific label when formatting a newly
 # encrypted device with the filesystem set above. If your selected filesystem
 # doesn't support labels, leave this blank.
-luks::fs_label			=	nc0
-luks::fs_options		=	-L #!variable!fs_label!# 
+remote-usb::luks::fs_label		=	nc0
+remote-usb::luks::fs_options		=	-L #!variable!fs_label!# 
 
 # If the 'force_initialize' option is enabled, you can use this option to
 # selectively block the forced reformatting based on the label of the drive.
@@ -446,7 +465,7 @@ luks::fs_options		=	-L #!variable!fs_label!#
 # in '*', then a label will be considered a match if the start of the string
 # matches the value to the left of the '*' here. The string *is* case 
 # sensitive.
-luks::protected_label		=	c*
+remote-usb::luks::protected_label	=	c*
 
 
 ###############################################################################
