* Fixed a bug in the kickstart scripts where a space was missing in 'KERNEL memtest'. * Updated the generated 'example_striker-installer.txt' file to use --router-mode and removed the manual definition of the AN!Repo (it is now an RPM included in the ISO). * Changed up how AN!Repo is handled now that it is an RPM. * Made the striker.conf setup properly configure ScanCore. * Fixed a bug with the path to ScanCore and disabled it from being added to root's crontab for now. * Fixed a couple variable names in striker-installer. * Updated striker-installer to copy ScanCore into place properly. * Changed when an internet connection is checked for in striker-installer and set a global variable that is checked when registering a RHEL dashboard against RHN.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -44,6 +44,32 @@ smtp::helo_domain		=	example.com
 # smtp::server in most cases.
 mail_data::sending_domain	=	example.com
 
+# If you create a custom skin, uncomment this and change the value to the name
+# of the directory your skin is stored in under /var/www/html/skins/
+#sys::skin			=	alteeve
+
+# This controls how many seconds to wait before reloading the main page and
+# status pages. Set to '0' to never refresh the page. Yes, this is because we
+# suck at AJAX... Patches welcomed. ;)
+sys::reload_page_timer		=	0
+
+# If you want to use your UPSes as rack-wide watchdog timers, and enable the
+# ability to totally power cycle or power off your Anvil! via the Striker UI,
+# set this to '1'. 
+# 
+# USE WITH CAUTION!
+# 
+#sys::use_apc_ups_watchdog	=	0
+
+# By default, the install manifest uses the standard MTU of 1500 for all
+# networks. This is not (yet) configurable in the Install Manifest menu. If you
+# know your network will proprely work with a higher MTU, uncomment this and
+# set your desired MTU.
+# 
+# NOTE: If the MTU is too large, The install manifest run will hang when it
+#       tries to start DRBD.
+#       
+#sys::install_manifest::default::mtu	=	1500
 
 ##############################################################################
 # ScanCore configuration variables                                           #
@@ -65,23 +91,18 @@ mail_data::sending_domain	=	example.com
 #
 # ScanCore database password
 #scancore::db::X::password
-#
-# Force the creation of the database, if needed.
-#scancore::db::X::initialize
 # 
-scancore::db::1::host			=	an-striker01.alteeve.ca
-scancore::db::1::port			=	5432
-scancore::db::1::name			=	scancore
-scancore::db::1::user			=	admin
-scancore::db::1::password		=	Initial1
-scancore::db::1::initialize		=	1
-
-scancore::db::2::host			=	an-striker02.alteeve.ca
-scancore::db::2::port			=	5432
-scancore::db::2::name			=	scancore
-scancore::db::2::user			=	admin
-scancore::db::2::password		=	Initial1
-scancore::db::2::initialize		=	1
+#scancore::db::1::host			=	an-striker01.alteeve.ca
+#scancore::db::1::port			=	5432
+#scancore::db::1::name			=	scancore
+#scancore::db::1::user			=	admin
+#scancore::db::1::password		=	Initial1
+#
+#scancore::db::2::host			=	an-striker02.alteeve.ca
+#scancore::db::2::port			=	5432
+#scancore::db::2::name			=	scancore
+#scancore::db::2::user			=	admin
+#scancore::db::2::password		=	Initial1
 
 
 # ScanCore can trigger a shutdown of a node for two reasons; Overheating and
