*** Yup, ScanCore is still broken. ***
But!

* This commit has had it's 'update_db_agents()' function heavily rewritten and initial bi-directional resync works!
** I ran into a few problems in testing, mainly that I needed to update the public schema on the DB(s) that are behind, so my original plan to just write directly to the history schema was flawed. This forced the resync logic to be a bit more complicated than I had hoped, but I was able to keep the additional complexity to a minimum, I think.
** In theory, this should now work fine for N-way resync as well, but that still needs to be tested.
** Now that I have a working method of resync, I need to go back and update all the other functions...
* Made ScanCore exit if the 'alerts::recipient::X::{file,email}' values are malformed.
* Added 'not null' constraints to the history schema for the main ScanCore SQL tables now that we're writing directly to them.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -383,7 +383,7 @@ sys::reload_page_timer		=	0
 #
 # File recipients are entered in the following format, with "imperial"
 # measurements selected as an example:
-#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info",units=imperial
+#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",level="info",units="imperial"
 #
 # What is important is that the integer after 'alerts::recipient::X' is unique.
 # 
@@ -392,8 +392,10 @@ sys::reload_page_timer		=	0
 #       with ScanCore itself, have the appropriate language strings before you
 #       use them!
 # 
+# NOTE: Be sure to put the value in double-quotes.
+# 
 alerts::recipient::1::email		=	name="Madison Kelly",email="debug@alteeve.ca",language="en_CA",level="notice"
-alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info",units=imperial
+alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",level="info",units="imperial"
 
 
 ###############################################################################
