* Added support for disabling 'safe_anvil_start' in striker.conf. Disable it by default in the stock striker.conf and enable it when creating the config in InstallManifest, if sas was enabled in the manifest XML file. * Reworked how 'priority=1' is removed by InstallManifest to make it simpler (and hopefully more robust).
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -492,6 +492,19 @@ remote-usb::luks::protected_label	=	c*
 
 
 ###############################################################################
+# Tools control                                                               #
+###############################################################################
+
+# This section is used to control the behaviour of various Striker and Anvil!
+# tools.
+
+# Setting this to '1' will enable 'safe_anvil_start'. Use this when you have
+# finished building and testing your Anvil!. Set this to '0' to disable the
+# Anvil! autostart when you plan to do maintenance on the node.
+tools::safe_anvil_start::enabled	=	0
+
+
+###############################################################################
 # Anvil! definitions                                                          #
 ###############################################################################
 
