The "Oh look, real work again" commit.
* Added an escape to AN::Tools::Math->round() that simply returns '--' if it is passed in '--'.
* Added AN::Tools to 'striker'! It's super basic at this point, but it is there.
* Striker now updates the ScanCore database to mark nodes as 'clean' off and clears that when powering off and booting nodes, respectively.
* Added an option to striker.conf called 'tools::boot_nodes::enabled' that allows for temporary disabling of ScanCore's automatic node booting function.
* Fixed up InstallManifest and striker-installer to properly add ScanCore to the root user's cron table on both nodes and dashboards.
** On dashboards, striker-installer can be run with '--disable-scancore' to prevent it from being automatically used.
** On nodes, '<use scancore="[true|false]" >' was added and used. It is not yet setable from the WebUI, but it can be altered manually in an install manifest.
* Added empty entries to striker-installer's '$conf' hash for all possible switches.

Lots of testing is still needed...

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -503,6 +503,11 @@ remote-usb::luks::protected_label	=	c*
 # Anvil! autostart when you plan to do maintenance on the node.
 tools::safe_anvil_start::enabled	=	0
 
+# Setting this to '1' will enable Striker's automatic booting of nodes that are
+# off. When enabled, nodes will be booted provided the power and temperature is
+# good and that the nodes were not cleanly stopped via Striker.
+tools::boot_nodes::enabled		=	1
+
 
 ###############################################################################
 # Anvil! definitions                                                          #
