* Fixed AN::Tools->short_hostname() so that it works without the HOSTNAME environment variable; * Updated all references to 'Data/strings.xml' to be statically '/sbin/striker/Data/strings.xml'. * Changes how ScanCore, safe_anvil_start and anvil-kick-apc-ups to always be installed/configure, but now exit if not enabled in striker.conf. Updated striker-installer and InstallManifest to enable/disable these at the very end of the installs by flipping this config value. This was needed because, for example, when safe_anvil_start is enabled before InstallManifest finished, it would try to install the only-partially configured cluster after initial reboot. * Fixed a bad message when clvmd failed to start during an InstallManifest run. * Deleted some old, commented-out code anvil-kick-apc-ups -> from get_ups_ips(). * Bumped up the delay time in cycle_vm_nics.pl after hitting a case where the old timer wasn't long enough for the 'down' to be detected. * Cleaned up 'safe_anvil_start' log messages by deleting '[ Debug ] -' from many lines (it's prefixed automatically with logger entries 2+). * Update 'safe_anvil_start' to work with KVM-based clusters (haven't tested yet if this breaks IPMI clusters...).
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -71,9 +71,44 @@ sys::reload_page_timer		=	0
 #       
 #sys::install_manifest::default::mtu	=	1500
 
+
+###############################################################################
+# Tools control                                                               #
+###############################################################################
+
+# This section is used to control the behaviour of various Striker and Anvil!
+# tools.
+
+# Setting this to '1' will enable 'anvil-kick-apc-ups', which is a tool that
+# uses the Anvil!'s APC UPSes as a form of system-wide watchdog timer. When
+# enabled, the system will tell the UPS to power off after a set amount of time
+# and then turn back on after another set amount of time. During normal 
+# operation, the shutdown will be cancelled and the timer reset repeatedly.
+# This way, the UPSes never shut off unless something happens which causes all
+# machines running 'anvil-kick-apc-ups' to fail to reset the timer, such as a
+# switch stack failure that knocks out all networking. The goal is to force a
+# hard reset of the entire rack in such a case, in the hopes that the power-
+# cycle will restore normal operation.
+tools::anvil-kick-apc-ups::enabled	=	0
+
+# Setting this to '1' will enable 'safe_anvil_start'. Use this when you have
+# finished building and testing your Anvil!. Set this to '0' to disable the
+# Anvil! autostart when you plan to do maintenance on the node.
+tools::safe_anvil_start::enabled	=	0
+
+# Setting this to '1' will enable Striker's automatic booting of nodes that are
+# off. When enabled, nodes will be booted provided the power and temperature is
+# good and that the nodes were not cleanly stopped via Striker.
+tools::boot_nodes::enabled		=	1
+
+
 ##############################################################################
 # ScanCore configuration variables                                           #
 ##############################################################################
+
+# This is the master switch for ScanCore. If this is set to '0', ScanCore will
+# immediately exit, if run.
+scancore::enabled			=	0
 
 # Database connection variables.
 # 
@@ -489,24 +524,6 @@ remote-usb::luks::fs_options		=	-L #!variable!fs_label!#
 # matches the value to the left of the '*' here. The string *is* case 
 # sensitive.
 remote-usb::luks::protected_label	=	c*
-
-
-###############################################################################
-# Tools control                                                               #
-###############################################################################
-
-# This section is used to control the behaviour of various Striker and Anvil!
-# tools.
-
-# Setting this to '1' will enable 'safe_anvil_start'. Use this when you have
-# finished building and testing your Anvil!. Set this to '0' to disable the
-# Anvil! autostart when you plan to do maintenance on the node.
-tools::safe_anvil_start::enabled	=	0
-
-# Setting this to '1' will enable Striker's automatic booting of nodes that are
-# off. When enabled, nodes will be booted provided the power and temperature is
-# good and that the nodes were not cleanly stopped via Striker.
-tools::boot_nodes::enabled		=	1
 
 
 ###############################################################################
