This commit mostly cleans up and improves logging.
* Log messages related to nodes powering off during power or thermal events are now written once per state change.
* Changed the 'tools::boot_nodes::enabled' variable to 'scancore::disable::boot_nodes' to make it more similar to existing ScanCore tuning variable names.
* Added a message to STDOUT to tell the user when 'safe_anvil_start' has been enabled or disabled.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -142,11 +142,6 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # Anvil! autostart when you plan to do maintenance on the node.
 tools::safe_anvil_start::enabled	=	0
 
-# Setting this to '1' will enable Striker's automatic booting of nodes that are
-# off. When enabled, nodes will be booted provided the power and temperature is
-# good and that the nodes were not cleanly stopped via Striker.
-tools::boot_nodes::enabled		=	1
-
 
 ##############################################################################
 # ScanCore configuration variables                                           #
@@ -200,6 +195,11 @@ scancore::enabled			=	0
 # setting these variables to '1'.
 #scancore::disable::power_shutdown	=	0
 #scancore::disable::thermal_shutdown	=	0
+
+# Setting this to '1' will disable ScanCore's automatic booting of nodes that are
+# off. When enabled, nodes will be booted provided the power and temperature is
+# good and that the nodes were not cleanly stopped via Striker's WebUI.
+scancore::disable::boot_nodes		=	0
 
 
 ###############################
