* Added more data to scan-storcli * Tightened up the run frequency of safe_anvil_start from every 5 minutes to every 1 minute in Install Manifest * Removed aleeve-specific email from the sample striker.conf file's email alerts config. * Made node2 wait only 60 seconds instead of 120 when running safe_anvil_start * Added (but not yet tested) --abort to safe_anvil_start that will kill any running instance and set striker.conf back to 0 to prevent it from running again this session WITHOUT actually disabling it on the next reboot. * Made safe_anvil_start check for an existing instance and exit if one is found to avoid the spawning repeatedly.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -99,7 +99,7 @@ sys::reload_page_timer		=	0
 # you can use 'units=imperial'.
 # 
 # E-mail recipients are entered in the following format:
-#alerts::recipient::1::email		=	name="Madison Kelly",email="mkelly@alteeve.ca",language="en_CA",level="notice"
+#alerts::recipient::1::email		=	name="Admin User",email="admin@example.com",language="en_CA",level="notice"
 #
 # File recipients are entered in the following format, with "imperial"
 # measurements selected as an example:
