* Updated ScanCore and the existing agents to have user-configurable log level, language and file as well as stdout language. Each can now be configured independently, too. * Added a ping-check to scan-apc-ups to skip missing UPSes without waiting for OID reads to timeout. * Made it a global thing in AN::Tools::Storage->read_conf() to substitute out #!hostname!# and #!short_hostname!# from any variable read in. * Cleaned up how $THIS_FILE is set in ScanCore and all existing agents.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -201,6 +201,68 @@ scancore::enabled			=	0
 # good and that the nodes were not cleanly stopped via Striker's WebUI.
 scancore::disable::boot_nodes		=	0
 
+### Logging and Language
+# ScanCore itself, plus each agent, can have customized log levels, language,
+# log files. You can also customize the language used when ScanCore or an agent
+# prints to STDOUT (the screen). By default, all log to '/var/log/ScanCore.log'
+# in 'en_CA' (Canadian English) with log level '1', which covers important or 
+# warning messages only. Likewise, output to STDOUT is also in 'en_CA'.
+# 
+# To customize, you can use the following four variables:
+# 
+#scancore::log_file			=	/var/log/ScanCore.log
+#scancore::log_level			=	1
+#scancore::log_language			=	en_CA
+#scancore::language			=	en_CA
+# 
+# The same four variables are used to configure the agents, simply substitute 
+# 'scancore' for the name of the agent. For example, to customize the IPMI
+# scan agent 'scan-ipmitool', you can use:
+# 
+#scan-ipmitool::log_file		=	/var/log/ScanCore.log
+#scan-ipmitool::log_level		=	1
+#scan-ipmitool::log_language		=	en_CA
+#scan-ipmitool::language		=	en_CA
+# 
+# NOTE: The language you choose MUST exist in the XML "strings" files!
+# 
+
+# ScanCore itself:
+scancore::log_file			=	/var/log/ScanCore.log
+scancore::log_level			=	2
+scancore::log_language			=	en_CA
+scancore::language			=	en_CA
+
+# IPMI scan agent:
+scan-ipmitool::log_file			=	/var/log/ScanCore.log
+scan-ipmitool::log_level		=	2
+scan-ipmitool::log_language		=	en_CA
+scan-ipmitool::language			=	en_CA
+
+# LSI/Avago RAID controller scan agent:
+scan-storcli::log_file			=	/var/log/ScanCore.log
+scan-storcli::log_level			=	2
+scan-storcli::log_language		=	en_CA
+scan-storcli::language			=	en_CA
+
+# RHEL's Resource Group manager's 'clustat' scan agent:
+scan-clustat::log_file			=	/var/log/ScanCore.log
+scan-clustat::log_level			=	2
+scan-clustat::log_language		=	en_CA
+scan-clustat::language			=	en_CA
+
+# Linux bond driver scan agent:
+scan-bond::log_file			=	/var/log/ScanCore.log
+scan-bond::log_level			=	2
+scan-bond::log_language		=	en_CA
+scan-bond::language			=	en_CA
+
+# APC/Schneider brand SNMP UPS scan agent:
+scan-apc-ups::log_file			=	/var/log/ScanCore.log
+scan-apc-ups::log_level			=	2
+scan-apc-ups::log_language		=	en_CA
+scan-apc-ups::language			=	en_CA
+
 
 ###############################
 # Power Shutdown Variables    #
