* Fixed a bug in the sample striker.conf that had the sample install manifest default MTU size variable name wrong.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -61,7 +61,7 @@ sys::reload_page_timer		=	0
 # NOTE: If the MTU is too large, The install manifest run will hang when it
 #       tries to start DRBD.
 #       
-#sys::install_manifest::default::mtu	=	1500
+#sys::install_manifest::default::mtu_size	=	1500
 
 
 ##############################################################################
