--- a/striker.conf
+++ b/striker.conf
@@ -581,6 +581,42 @@ remote-usb::enable_remote_usb_mount	=	0
 
 
 ###############################################################################
+# Server Configuration                                                        #
+###############################################################################
+
+# A user may wish for servers to boot in a certain order and with possible
+# delays between machine boots. This section allows for this configuration.
+# 
+# Server boot ordering is configured by defining each server with a unique
+# variable integer. This integer has no bearing on the boot order, it simply
+# provides a way to distinguish between entries.
+# 
+# The values are in the form: "(boot order):(delay):(server name)".
+# 
+# Any undefined server will be booted as if it were set to '1:0:x' and, thus,
+# will boot immediately.
+# 
+# One or more servers can have the same 'boot order' value. All servers in the
+# lower boot order must been before the next boot order is evaluated. Once a
+# server is ready for boot, the 'delay' will be checked. If a delay is set, 
+# it will sleep for the defined number of seconds before actually starting.
+# 
+# So in the example set below;
+# 1. vm01-foo and vm02-bar will be booted without delay
+# 2. vm04-bang will boot once set #1 servers have booted without delay, but 
+#    vm03-baz will wait 30 seconds before booting.
+# 3. vm05-boop will boot once set #2 servers have booted.
+# 
+# If a given server fails to boot, the servers is subsequent sets will not 
+# boot.
+#server::boot_order::vm01-foo		=	1:0
+#server::boot_order::vm02-bar		=	1:0
+#server::boot_order::vm03-baz		=	2:30
+#server::boot_order::vm04-bang		=	2:0
+#server::boot_order::vm05-boop		=	3:60
+
+
+###############################################################################
 # Anvil! definitions                                                          #
 ###############################################################################
 
