* Added a TODO to ScanCore to add '--summary' support to all agents for a nice summary email to be sent on ScanCore start-up or when queried. * Started the process of archiving the massive scan-storcli attempt and create a stripped down version so that we can ship ScanCore. Will add back in full descriptions of variables as time goes on and we find docs on things. * Finished (but untested yet) switching populate_remote_authorized_keys with striker-push-ssh.
Signed-off-by: digimer <digimer@lemass.alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -142,6 +142,18 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # Anvil! autostart when you plan to do maintenance on the node.
 tools::safe_anvil_start::enabled	=	0
 
+# If you plan to use Virtual Machine Manager with a GUI install on your Striker
+# dashboards, setting this option to '1' will add the Striker user's public RSA
+# keys on each managed Anvil!. This will prevent the need for the user to
+# repeatedly enter each node's root password when trying to connect to a 
+# server.
+# 
+# NOTE: Consider the security implications of this! If this is enabled, anyone
+#       who has access to the dashboard will have unfettered access to the
+#       Anvil! nodes. Enable this feature only in environments where physical
+#       access is controlled.
+tools::striker-push-ssh::enabled	=	0
+
 
 ##############################################################################
 # ScanCore configuration variables                                           #
