* Added a new feature to force DRBD to be immediately UpToDate/UpToDate when created. * Updated the alteeve skin, still a work in progress.
Signed-off-by: digimer <digimer@lemass.alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -63,6 +63,16 @@ sys::reload_page_timer		=	0
 #       
 #sys::install_manifest::default::mtu_size	=	1500
 
+# In rare cases, you may wish to force DRBD into UpToDate/UpToDate state 
+# without an initial sync. Generally this is not a good idea because DRBD's
+# backing devices won't be the same until data is written to them via DRBD. So
+# a verify call will find a lot of inconsistencies should it be run. However,
+# if you have a large storage pool and data is rapidly written to it, you may
+# wish to enable this. 
+# In short; this calls; 'drbdadm -- --clear-bitmap new-current-uuid <res>'
+# when first building the DRBD resource.
+#sys::install_manifest::default::immediate-uptodate	=	0
+
 
 ##############################################################################
 # ScanCore Alert Targets                                                     #
