* Created setuid c-wrappers for and added hooks into Striker to call the new striker-configure-vmm and striker-merge-dashboards tools. * Create a 'sync_with_peer' function in Cluster.pm to call the new tools, if appropriate.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -164,6 +164,14 @@ tools::safe_anvil_start::enabled	=	0
 #       access is controlled.
 tools::striker-push-ssh::enabled	=	0
 
+# By default, Striker will sync with it's peer when its configuration changes
+# via the web interface. This works by looking at the 'scancore::x::host'
+# entries, matching the local machine with one entry and selecting the other
+# as the peer node. The database password needs to be the same as the root
+# password for this to work. To disable this automatic sync process, set this
+# to '0'.
+tools::striker::auto-sync		=	1
+
 
 ##############################################################################
 # ScanCore configuration variables                                           #
