* This simplifies and fixes the anvil-self-destruct and anvil-generate-passphrase tools. Re-encryption and so on is really a waste of time here; if someone has root access to secured nodes, the game is already lost.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -172,6 +172,26 @@ tools::striker-push-ssh::enabled	=	0
 # to '0'.
 tools::striker::auto-sync		=	1
 
+### NOTE: This is quite weak security... an attacker with root access can 
+###       disable this function and avoid the need for a passphrase entirely.
+###       We could add a check against the passphrase against the controller
+###       but that would be no better. In the end, the commands to send to the
+###       controller are not secured so any attempt at security here is little
+###       more than a delay tactice against a malicious attacker.
+###       
+###       The primary purpose of this tool is to render the data forensically
+###       unrecoverable by a trusted user of the system. With this option 
+###       available, it is *critical* that you trust whomever has access to 
+###       your Anvil!. If the system is critical enough to use this feature, it
+###       should really be air-gapped from any public network.
+# 
+# This sets a minimum password length. Default is '6'.
+tools::anvil-self-destruct::minimum_length	=	6
+
+# If you're Anvil! uses SafeStore and self-encrypted drives, you can enable the
+# self-destruct function by setting a passphrase below. 
+tools::anvil-self-destruct::hash		=	
+
 
 ##############################################################################
 # ScanCore configuration variables                                           #
