* Got more work done on the reworked scan-storcli, but it's still far from usable. * Changed the striker-usb-insert tool to support 'remote-usb::local::host' set as '#!short_hostname!#' so that the new config sync tools don't break it by forcing the server to always connect to one dashboard or ther other.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -580,7 +580,11 @@ remote-usb::enable_remote_usb_mount	=	0
 # mounted filesystem has a label, that will be appended after the USB address
 # as well.
 # 
-#remote-usb::local::host		=	10.255.4.3
+# The 'host' can be the special replacement variable '#!short_hostname!#' which
+# Striker will translate into the current dashboard's host name. This way, the
+# same/sync'ed striker.conf will work on both nodes.
+# 
+#remote-usb::local::host		=	#!short_hostname!#
 #remote-usb::local::user		=	root
 #remote-usb::local::password		=	secret
 #remote-usb::local::mount		=	/mnt/remote
