--- a/striker.conf
+++ b/striker.conf
@@ -140,7 +140,7 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",
 # enabled, the system will tell the UPS to power off after a set amount of time
 # and then turn back on after another set amount of time. During normal 
 # operation, the shutdown will be cancelled and the timer reset repeatedly.
-# This way, the UPSes never shut off unless something happens which causes all
+# This way, the UPSes never shut off unless something anvilpens which causes all
 # machines running 'anvil-kick-apc-ups' to fail to reset the timer, such as a
 # switch stack failure that knocks out all networking. The goal is to force a
 # hard reset of the entire rack in such a case, in the hopes that the power-
@@ -209,7 +209,10 @@ tools::anvil-self-destruct::hash		=	vSsar3708Jvp9Szi2NWZZ02Bqp1qRCFpbcTZPdBhnWgs
 
 # This is the master switch for ScanCore. If this is set to '0', ScanCore will
 # immediately exit, if run.
-scancore::enabled			=	0
+# 
+# This can be enables and disabled using:
+# /sbin/striker/ScanCore/ScanCore --{enable,disable}
+scancore::enabled			=	1
 
 # Database connection variables.
 # 
@@ -683,7 +686,7 @@ remote-usb::enable_remote_usb_mount	=	0
 # servers to the Anvil!'s bridge, you can do so by setting the variable below.
 # This works via a 'udev' trigger will fire when ever a new 'vnetX' interface 
 # is created. This in turn calls 'tools/anvil-adjust-vnet' which looks here for
-# this variable. This generally happens fast enough that the change is in place
+# this variable. This generally anvilpens fast enough that the change is in place
 # before the server reaches the start of the OS boot sequence or before the 
 # server finished migrating to the target node.
 # 
@@ -733,116 +736,167 @@ remote-usb::enable_remote_usb_mount	=	0
 # domain name using this variable.
 #sys::install_manifest::default::domain				=	example.com
 
-# Set the common options.
-sys::install_manifest::default::password			=	$conf->{sys}{password}	
+### Set the common options.
+# This is the default password to use when building the new Anvil!.
+sys::install_manifest::default::password			=	
+
+# If you need to set any special 'ethtool' options to tune your BCN network
+# interfaces, you can do so here. If you use a variable, please escape it with
+# a backslash, like '\${DEVICE}'. 
 sys::install_manifest::default::bcn_ethtool_opts		=	
+
+# This is the network to use for the BCN. Be sure to set '0' in the variable 
+# octets. For example, if your network is '10.20.0.0/255.255.0.0', then the 
+# value to set here is '10.20.0.0'.
 sys::install_manifest::default::bcn_network			=	10.20.0.0
+
+# This is the subnet mask for the BCN.
 sys::install_manifest::default::bcn_subnet			=	255.255.0.0
+
+# These are the same options as above, but for the SN and IFN.
 sys::install_manifest::default::sn_ethtool_opts			=	
 sys::install_manifest::default::sn_network			=	10.10.0.0
 sys::install_manifest::default::sn_subnet			=	255.255.0.0
-sys::install_manifest::default::ifn_ethtool_opts		=	--set-ring \\\${DEVICE} rx 4096 tx 4096; --set-channels \\\${DEVICE} combined 8
-sys::install_manifest::default::ifn_network			=	$conf->{sys}{ifn_network}.0
-sys::install_manifest::default::ifn_subnet			=	255.255.255.0
-sys::install_manifest::default::library_size			=	20
+sys::install_manifest::default::ifn_ethtool_opts		=	
+sys::install_manifest::default::ifn_network			=	10.255.0.0
+sys::install_manifest::default::ifn_subnet			=	255.255.0.0
+
+# If your Anvil! will have access to the internet, set the default gateway and
+# DNS server addresses here.
+sys::install_manifest::default::ifn_gateway			=	10.255.255.254
+sys::install_manifest::default::dns1				=	8.8.8.8
+sys::install_manifest::default::dns2				=	8.8.4.4
+
+# If you want to use custom time servers, set their IP addresses here.
+sys::install_manifest::default::ntp1				=	
+sys::install_manifest::default::ntp2				=	
+
+# This sets the default name of the Anvil! in the HA software stack. By 
+# default, this is set to '<prefix>-anvil-<sequence_number>' and generally 
+# should not be set manually.
+sys::install_manifest::default::name				=	
+
+# This is the default size of the "Media Library" (size and the units, which
+# can be 'GiB' or 'TiB').
+sys::install_manifest::default::library_size			=	40
 sys::install_manifest::default::library_unit			=	GiB
-sys::install_manifest::default::pool1_size			=	100
-sys::install_manifest::default::pool1_unit			=	%
-sys::install_manifest::default::repositories			=
 
-# Tune DRBD 
-sys::install_manifest::default::hap_drbd_disk_disk-barrier	=	false
-sys::install_manifest::default::hap_drbd_disk_disk-flushes	=	false
-sys::install_manifest::default::hap_drbd_disk_md-flushes	=	false
-sys::install_manifest::default::hap_drbd_options_cpu-mask	=	f
-sys::install_manifest::default::hap_drbd_net_max-buffers	=	16000
-sys::install_manifest::default::hap_drbd_net_sndbuf-size	=	10M
-sys::install_manifest::default::hap_drbd_net_rcvbuf-size	=	10M
+### Tune DRBD  
+# If you have a hardware RAID controller *with* flash-backed or batter-backed
+# write cache, and if the cache policy is set to write-back with FBWC/BBWC, 
+# then the following three options can be set to 'false'. In *all* other cases,
+# this must be set to 'true' (the default).
+sys::install_manifest::default::anvil_drbd_disk_disk-barrier	=	false
+sys::install_manifest::default::anvil_drbd_disk_disk-flushes	=	false
+sys::install_manifest::default::anvil_drbd_disk_md-flushes	=	false
 
-# Hidden variables
-sys::install_manifest::default::ssh_keysize			=	8191
-sys::install_manifest::default::dashboard_user			=	$conf->{sys}{admin_user}
-sys::install_manifest::default::cluster_name			=	ccrs
-sys::install_manifest::default::open_vnc_ports			=	100
+# If you need to control which CPUs DRBD uses, you can do so with cpu mask. For
+# details on how to use this, see: 
+# https://drbd.linbit.com/users-guide/s-latency-tuning.html#s-latency-tuning-cpu-mask
+sys::install_manifest::default::anvil_drbd_options_cpu-mask	=	f
 
-# This sets the name of the cluster in the HA software stack
-sys::install_manifest::default::name				=	ccrs	
-sys::install_manifest::default::ifn_gateway			=	$conf->{sys}{ifn_network}.1
-sys::install_manifest::default::dns1				=
-sys::install_manifest::default::dns2				=
-sys::install_manifest::default::ntp1				=	$conf->{sys}{ifn_network}.90
-sys::install_manifest::default::ntp2				=	$conf->{sys}{ifn_network}.91
+# These options tune how the network is handled in DRBD. See:
+# https://drbd.linbit.com/users-guide/s-throughput-tuning.html
+sys::install_manifest::default::anvil_drbd_net_max-buffers	=	16000
+sys::install_manifest::default::anvil_drbd_net_sndbuf-size	=	10M
+sys::install_manifest::default::anvil_drbd_net_rcvbuf-size	=	10M
 
-### Foundation pack
-sys::install_manifest::default::switch1_name			=	ethswitch1
-sys::install_manifest::default::switch1_ip			=	$conf->{sys}{ifn_network}.40
-sys::install_manifest::default::switch2_name			=	ethswitch2
-sys::install_manifest::default::switch2_ip			=	$conf->{sys}{ifn_network}.41
-sys::install_manifest::default::ups1_name			=	ups1
-sys::install_manifest::default::ups1_ip				=	$conf->{sys}{ifn_network}.20
-sys::install_manifest::default::ups2_name			=	ups2
-sys::install_manifest::default::ups2_ip				=	$conf->{sys}{ifn_network}.21
-sys::install_manifest::default::pdu1_name			=	pdu1A
-sys::install_manifest::default::pdu1_ip				=	$conf->{sys}{ifn_network}.30
-sys::install_manifest::default::pdu1_agent			=	fence_raritan_snmp
-sys::install_manifest::default::pdu2_name			=	pdu1B
-sys::install_manifest::default::pdu2_ip				=	$conf->{sys}{ifn_network}.31
-sys::install_manifest::default::pdu2_agent			=	fence_raritan_snmp
-sys::install_manifest::default::pdu3_name			=	pdu2A
-sys::install_manifest::default::pdu3_ip				=	$conf->{sys}{ifn_network}.32
-sys::install_manifest::default::pdu3_agent			=	fence_raritan_snmp
-sys::install_manifest::default::pdu4_name			=	pdu2B
-sys::install_manifest::default::pdu4_ip				=	$conf->{sys}{ifn_network}.33
-sys::install_manifest::default::pdu4_agent			=	fence_raritan_snmp
-sys::install_manifest::default::dashboard1_name			=	dashboard1.$conf->{sys}{domain}
-sys::install_manifest::default::dashboard1_bcn_ip		=	10.20.4.1
-sys::install_manifest::default::dashboard1_ifn_ip		=	$conf->{sys}{ifn_network}.11
-sys::install_manifest::default::dashboard2_name			=	dashboard2.$conf->{sys}{domain}
-sys::install_manifest::default::dashboard2_bcn_ip		=	10.20.4.2
-sys::install_manifest::default::dashboard2_ifn_ip		=	$conf->{sys}{ifn_network}.13
+### Foundation pack - Set the host names and IP addresses of the various 
+###                   foundation pack devices.
+# Ethernet switches. If you are using stacked switches, the host name and IP 
+# of the second switch can be set, but will likely be ignored.
+sys::install_manifest::default::switch1_name			=	an-switch01
+sys::install_manifest::default::switch1_ip			=	10.20.1.1
+sys::install_manifest::default::switch2_name			=	an-switch02
+sys::install_manifest::default::switch2_ip			=	10.20.1.2
 
-### Node 1
-sys::install_manifest::default::node1_name			=	node1.$conf->{sys}{domain}
-sys::install_manifest::default::node1_bcn_ip			=	10.20.10.1
-sys::install_manifest::default::node1_ipmi_ip			=	$conf->{sys}{ifn_network}.15
-sys::install_manifest::default::node1_sn_ip			=	10.10.10.1
-sys::install_manifest::default::node1_ifn_ip			=	$conf->{sys}{ifn_network}.10
-sys::install_manifest::default::node1_pdu1_outlet		=	1
-sys::install_manifest::default::node1_pdu2_outlet		=	1
-sys::install_manifest::default::node1_pdu3_outlet		=
-sys::install_manifest::default::node1_pdu4_outlet		=
-
-### Node 2
-sys::install_manifest::default::node2_name			=	node2.$conf->{sys}{domain}
-sys::install_manifest::default::node2_bcn_ip			=	10.20.10.2
-sys::install_manifest::default::node2_ipmi_ip			=	$conf->{sys}{ifn_network}.17
-sys::install_manifest::default::node2_sn_ip			=	10.10.10.2
-sys::install_manifest::default::node2_ifn_ip			=	$conf->{sys}{ifn_network}.12
-sys::install_manifest::default::node2_pdu1_outlet		=
-sys::install_manifest::default::node2_pdu2_outlet		=
-sys::install_manifest::default::node2_pdu3_outlet		=	1
-sys::install_manifest::default::node2_pdu4_outlet		=	1
-
-### Some general config things
-# Set this to '2' or '4'.
+# This sets the switched PDU information. The 'pduX_agent' controls which fence
+# agent the Anvil! will use to communicate with it. Supported options are:
+# APC brand     - fence_apc_snmp
+# Raritan brand - fence_raritan_snmp
+# The Anvil! supports either 2 or 4 PDU configurations. If all equipment will
+# be in the same rack, you can skip pdu3 and pdu4. If you are building a 
+# dual-rack setup with a pair of PDUs per rack, then set 'pdu_count' to '4'
+# and define all four PDU entries.
 sys::install_manifest::pdu_count				=	4
+sys::install_manifest::default::pdu1_name			=	an-pdu01
+sys::install_manifest::default::pdu1_ip				=	10.20.2.1
+sys::install_manifest::default::pdu1_agent			=	fence_apc_snmp
+sys::install_manifest::default::pdu2_name			=	an-pdu02
+sys::install_manifest::default::pdu2_ip				=	10.20.2.2
+sys::install_manifest::default::pdu2_agent			=	fence_apc_snmp
+sys::install_manifest::default::pdu3_name			=	
+sys::install_manifest::default::pdu3_ip				=	
+sys::install_manifest::default::pdu3_agent			=	
+sys::install_manifest::default::pdu4_name			=	
+sys::install_manifest::default::pdu4_ip				=	
+sys::install_manifest::default::pdu4_agent			=	
+
+# This controls the default PDU fence agent to use. The default is 
+# 'fence_apc_snmp' which supports APC-brand PDUs. If you use Raritan brand 
+# though, you may wish to set this to 'fence_raritan_snmp'.
+sys::install_manifest::pdu_agent				=	fence_apc_snmp
+
+# This configures the UPSes.
+sys::install_manifest::default::ups1_name			=	an-ups01
+sys::install_manifest::default::ups1_ip				=	10.20.3.1
+sys::install_manifest::default::ups2_name			=	an-ups02
+sys::install_manifest::default::ups2_ip				=	10.20.3.2
+
+# This tells the nodes where to find the dashboards.
+sys::install_manifest::default::dashboard1_name			=	an-striker01
+sys::install_manifest::default::dashboard1_bcn_ip		=	10.20.4.1
+sys::install_manifest::default::dashboard1_ifn_ip		=	10.255.4.1
+sys::install_manifest::default::dashboard2_name			=	an-striker02
+sys::install_manifest::default::dashboard2_bcn_ip		=	10.20.4.2
+sys::install_manifest::default::dashboard2_ifn_ip		=	10.255.4.2
+
+# These two sections allow for controlling the default values assigned to 
+# nodes 1 and 2. Of most important note are the pdu outlet definitions. 
+# Generally, these options should not be set so that the web interface is
+# allowed to create sensible defaults.
+# Node 1
+sys::install_manifest::default::node1_name			=	
+sys::install_manifest::default::node1_bcn_ip			=	
+sys::install_manifest::default::node1_ipmi_ip			=	
+sys::install_manifest::default::node1_sn_ip			=	
+sys::install_manifest::default::node1_ifn_ip			=	
+sys::install_manifest::default::node1_pdu1_outlet		=	
+sys::install_manifest::default::node1_pdu2_outlet		=	
+sys::install_manifest::default::node1_pdu3_outlet		=	
+sys::install_manifest::default::node1_pdu4_outlet		=	
+
+# Node 2
+sys::install_manifest::default::node2_name			=	
+sys::install_manifest::default::node2_bcn_ip			=	
+sys::install_manifest::default::node2_ipmi_ip			=	
+sys::install_manifest::default::node2_sn_ip			=	
+sys::install_manifest::default::node2_ifn_ip			=	
+sys::install_manifest::default::node2_pdu1_outlet		=	
+sys::install_manifest::default::node2_pdu2_outlet		=	
+sys::install_manifest::default::node2_pdu3_outlet		=	
+sys::install_manifest::default::node2_pdu4_outlet		=	
 
 ### These values control what Install Manifest fields are displayed or hidden.
+# Generally speaking, nothing should be hidden. In some cases though, you may
+# wish to set a default value above and then hide the menu item so that users
+# can't modify it. To disable a field, set the appropriate value to '0'.
+# 
 # Primary configuration fields
-sys::install_manifest::show::prefix_field			=	0
+sys::install_manifest::show::prefix_field			=	1
 sys::install_manifest::show::sequence_field			=	1
-sys::install_manifest::show::domain_field			=	0
+sys::install_manifest::show::domain_field			=	1
 sys::install_manifest::show::password_field			=	1
-sys::install_manifest::show::bcn_network_fields			=	0
-sys::install_manifest::show::sn_network_fields			=	0
+sys::install_manifest::show::bcn_network_fields			=	1
+sys::install_manifest::show::sn_network_fields			=	1
 sys::install_manifest::show::ifn_network_fields			=	1
 sys::install_manifest::show::library_fields			=	1
 sys::install_manifest::show::pool1_fields			=	0
 sys::install_manifest::show::repository_field			=	0
 
 # Shared variables
-sys::install_manifest::show::name_field				=	0
-sys::install_manifest::show::dns_fields				=	0
+sys::install_manifest::show::name_field				=	1
+sys::install_manifest::show::dns_fields				=	1
 sys::install_manifest::show::ntp_fields				=	1
 
 # Foundation pack
@@ -859,20 +913,60 @@ sys::install_manifest::show::nodes_sn_field			=	1
 sys::install_manifest::show::nodes_ifn_field			=	1
 sys::install_manifest::show::nodes_pdu_fields			=	1
 
-# Runtime stuff
+### Runtime stuff
+# When set to '0', the results of checking for an internet connection or 
+# checking RHEL-based nodes against the Red Hat Network are suppressed.
 sys::install_manifest::show::internet_check			=       0
 sys::install_manifest::show::rhn_checks				=       0
+
+# Setting this to '1' switches the Install Manifest to 'Expert Mode', 
+# dramatically reducing the amount of help-text displayed beside each form
+# field.
 sys::expert_ui							=	1
+
+# On air-gapped Anvil! systems, setting this to '1' will disable links to 
+# external sites that can't be reached in any case.
 sys::disable_links						=	1
+
+# This controls how many (virtual) network interfaces to use for newly 
+# provisioned servers on your Anvil!. Generally, you will not want to set this
+# as '1' is the default and sufficient for most uses.
 sys::server::nic_count						=	1
+
+# This allows you to specify the qemu network driver to use for virtual 
+# interfaces connected to the IFN, BCN or SN bridges (when they exist). In most
+# cases, only 'ifn_nic_driver' is of use. To learn more about this, see:
+# https://libvirt.org/formatdomain.html#elementsDriverBackendOptions
 sys::server::bcn_nic_driver					=	
 sys::server::sn_nic_driver					=	
 sys::server::ifn_nic_driver					=	qemu
-sys::use_apc_ups_watchdog					=	1
-sys::auto_populate_ssh_users					=	$conf->{sys}{admin_user}
-sys::install_manifest::pdu_agent				=	fence_raritan_snmp
-sys::install_manifest::use_safe_hap_start			=	1
-sys::install_manifest::use_hap-kick-apc-ups			=	1
+
+# Setting this to '1' enables the APC UPS watchdog timer on new Anvil! systems.
+# This feature should be enabled carefully! It causes a timer to run on the 
+# UPSes where, if they aren't "kicked" frequently enough, they will cut off
+# all power to the Anvil! for a period of time before restoring power. In
+# remote installs where it is hard or impossible to access an Anvil!, this
+# feature could recover the Anvil! in a case like where a switch stack locks 
+# up, causing all network traffic to fail. With luck, the power cycle will
+# restore function. 
+# 
+# The risk though is that a manual shutdown of the nodes by an unaware 
+# administrator (who fails to manually stop the timer) could cause the rack to
+# lose all power unexpectedly.
+# 
+# This can be enables and disabled using:
+# /sbin/striker/anvil-kick-apc-ups --{enable,disable}
+sys::install_manifest::use_anvil-kick-apc-ups			=	1
+
+# When this is set to '1', an Anvil! node will do some sanity checks when it 
+# boots. If all is well and it can communicate with it's peer, it will start
+# the cluster stack and boot all servers. In most cases this is safe and a
+# desired behaviour, but it can cause unexpected server boots during manual
+# maintenance. 
+# 
+# This can be enables and disabled using:
+# /sbin/striker/safe_anvil_start --{enable,disable}
+sys::install_manifest::use_safe_anvil_start			=	1
 
 
 ###############################################################################
