--- a/striker.conf
+++ b/striker.conf
@@ -738,77 +738,77 @@ remote-usb::enable_remote_usb_mount	=	0
 
 ### Set the common options.
 # This is the default password to use when building the new Anvil!.
-sys::install_manifest::default::password			=	
+#sys::install_manifest::default::password			=	
 
 # If you need to set any special 'ethtool' options to tune your BCN network
 # interfaces, you can do so here. If you use a variable, please escape it with
 # a backslash, like '\${DEVICE}'. 
-sys::install_manifest::default::bcn_ethtool_opts		=	
+#sys::install_manifest::default::bcn_ethtool_opts		=	
 
 # This is the network to use for the BCN. Be sure to set '0' in the variable 
 # octets. For example, if your network is '10.20.0.0/255.255.0.0', then the 
 # value to set here is '10.20.0.0'.
-sys::install_manifest::default::bcn_network			=	10.20.0.0
+#sys::install_manifest::default::bcn_network			=	10.20.0.0
 
 # This is the subnet mask for the BCN.
-sys::install_manifest::default::bcn_subnet			=	255.255.0.0
+#sys::install_manifest::default::bcn_subnet			=	255.255.0.0
 
 # These are the same options as above, but for the SN and IFN.
-sys::install_manifest::default::sn_ethtool_opts			=	
-sys::install_manifest::default::sn_network			=	10.10.0.0
-sys::install_manifest::default::sn_subnet			=	255.255.0.0
-sys::install_manifest::default::ifn_ethtool_opts		=	
-sys::install_manifest::default::ifn_network			=	10.255.0.0
-sys::install_manifest::default::ifn_subnet			=	255.255.0.0
+#sys::install_manifest::default::sn_ethtool_opts			=	
+#sys::install_manifest::default::sn_network			=	10.10.0.0
+#sys::install_manifest::default::sn_subnet			=	255.255.0.0
+#sys::install_manifest::default::ifn_ethtool_opts		=	
+#sys::install_manifest::default::ifn_network			=	10.255.0.0
+#sys::install_manifest::default::ifn_subnet			=	255.255.0.0
 
 # If your Anvil! will have access to the internet, set the default gateway and
 # DNS server addresses here.
-sys::install_manifest::default::ifn_gateway			=	10.255.255.254
-sys::install_manifest::default::dns1				=	8.8.8.8
-sys::install_manifest::default::dns2				=	8.8.4.4
+#sys::install_manifest::default::ifn_gateway			=	10.255.255.254
+#sys::install_manifest::default::dns1				=	8.8.8.8
+#sys::install_manifest::default::dns2				=	8.8.4.4
 
 # If you want to use custom time servers, set their IP addresses here.
-sys::install_manifest::default::ntp1				=	
-sys::install_manifest::default::ntp2				=	
+#sys::install_manifest::default::ntp1				=	
+#sys::install_manifest::default::ntp2				=	
 
 # This sets the default name of the Anvil! in the HA software stack. By 
 # default, this is set to '<prefix>-anvil-<sequence_number>' and generally 
 # should not be set manually.
-sys::install_manifest::default::name				=	
+#sys::install_manifest::default::name				=	
 
 # This is the default size of the "Media Library" (size and the units, which
 # can be 'GiB' or 'TiB').
-sys::install_manifest::default::library_size			=	40
-sys::install_manifest::default::library_unit			=	GiB
+#sys::install_manifest::default::library_size			=	40
+#sys::install_manifest::default::library_unit			=	GiB
 
 ### Tune DRBD  
 # If you have a hardware RAID controller *with* flash-backed or batter-backed
 # write cache, and if the cache policy is set to write-back with FBWC/BBWC, 
 # then the following three options can be set to 'false'. In *all* other cases,
 # this must be set to 'true' (the default).
-sys::install_manifest::default::anvil_drbd_disk_disk-barrier	=	false
-sys::install_manifest::default::anvil_drbd_disk_disk-flushes	=	false
-sys::install_manifest::default::anvil_drbd_disk_md-flushes	=	false
+#sys::install_manifest::default::anvil_drbd_disk_disk-barrier	=	false
+#sys::install_manifest::default::anvil_drbd_disk_disk-flushes	=	false
+#sys::install_manifest::default::anvil_drbd_disk_md-flushes	=	false
 
 # If you need to control which CPUs DRBD uses, you can do so with cpu mask. For
 # details on how to use this, see: 
 # https://drbd.linbit.com/users-guide/s-latency-tuning.html#s-latency-tuning-cpu-mask
-sys::install_manifest::default::anvil_drbd_options_cpu-mask	=	f
+#sys::install_manifest::default::anvil_drbd_options_cpu-mask	=	f
 
 # These options tune how the network is handled in DRBD. See:
 # https://drbd.linbit.com/users-guide/s-throughput-tuning.html
-sys::install_manifest::default::anvil_drbd_net_max-buffers	=	16000
-sys::install_manifest::default::anvil_drbd_net_sndbuf-size	=	10M
-sys::install_manifest::default::anvil_drbd_net_rcvbuf-size	=	10M
+#sys::install_manifest::default::anvil_drbd_net_max-buffers	=	16000
+#sys::install_manifest::default::anvil_drbd_net_sndbuf-size	=	10M
+#sys::install_manifest::default::anvil_drbd_net_rcvbuf-size	=	10M
 
 ### Foundation pack - Set the host names and IP addresses of the various 
 ###                   foundation pack devices.
 # Ethernet switches. If you are using stacked switches, the host name and IP 
 # of the second switch can be set, but will likely be ignored.
-sys::install_manifest::default::switch1_name			=	an-switch01
-sys::install_manifest::default::switch1_ip			=	10.20.1.1
-sys::install_manifest::default::switch2_name			=	an-switch02
-sys::install_manifest::default::switch2_ip			=	10.20.1.2
+#sys::install_manifest::default::switch1_name			=	an-switch01
+#sys::install_manifest::default::switch1_ip			=	10.20.1.1
+#sys::install_manifest::default::switch2_name			=	an-switch02
+#sys::install_manifest::default::switch2_ip			=	10.20.1.2
 
 # This sets the switched PDU information. The 'pduX_agent' controls which fence
 # agent the Anvil! will use to communicate with it. Supported options are:
@@ -818,64 +818,64 @@ sys::install_manifest::default::switch2_ip			=	10.20.1.2
 # be in the same rack, you can skip pdu3 and pdu4. If you are building a 
 # dual-rack setup with a pair of PDUs per rack, then set 'pdu_count' to '4'
 # and define all four PDU entries.
-sys::install_manifest::pdu_count				=	4
-sys::install_manifest::default::pdu1_name			=	an-pdu01
-sys::install_manifest::default::pdu1_ip				=	10.20.2.1
-sys::install_manifest::default::pdu1_agent			=	fence_apc_snmp
-sys::install_manifest::default::pdu2_name			=	an-pdu02
-sys::install_manifest::default::pdu2_ip				=	10.20.2.2
-sys::install_manifest::default::pdu2_agent			=	fence_apc_snmp
-sys::install_manifest::default::pdu3_name			=	
-sys::install_manifest::default::pdu3_ip				=	
-sys::install_manifest::default::pdu3_agent			=	
-sys::install_manifest::default::pdu4_name			=	
-sys::install_manifest::default::pdu4_ip				=	
-sys::install_manifest::default::pdu4_agent			=	
+#sys::install_manifest::pdu_count				=	4
+#sys::install_manifest::default::pdu1_name			=	an-pdu01
+#sys::install_manifest::default::pdu1_ip				=	10.20.2.1
+#sys::install_manifest::default::pdu1_agent			=	fence_apc_snmp
+#sys::install_manifest::default::pdu2_name			=	an-pdu02
+#sys::install_manifest::default::pdu2_ip				=	10.20.2.2
+#sys::install_manifest::default::pdu2_agent			=	fence_apc_snmp
+#sys::install_manifest::default::pdu3_name			=	
+#sys::install_manifest::default::pdu3_ip				=	
+#sys::install_manifest::default::pdu3_agent			=	
+#sys::install_manifest::default::pdu4_name			=	
+#sys::install_manifest::default::pdu4_ip				=	
+#sys::install_manifest::default::pdu4_agent			=	
 
 # This controls the default PDU fence agent to use. The default is 
 # 'fence_apc_snmp' which supports APC-brand PDUs. If you use Raritan brand 
 # though, you may wish to set this to 'fence_raritan_snmp'.
-sys::install_manifest::pdu_agent				=	fence_apc_snmp
+#sys::install_manifest::pdu_agent				=	fence_apc_snmp
 
 # This configures the UPSes.
-sys::install_manifest::default::ups1_name			=	an-ups01
-sys::install_manifest::default::ups1_ip				=	10.20.3.1
-sys::install_manifest::default::ups2_name			=	an-ups02
-sys::install_manifest::default::ups2_ip				=	10.20.3.2
+#sys::install_manifest::default::ups1_name			=	an-ups01
+#sys::install_manifest::default::ups1_ip				=	10.20.3.1
+#sys::install_manifest::default::ups2_name			=	an-ups02
+#sys::install_manifest::default::ups2_ip				=	10.20.3.2
 
 # This tells the nodes where to find the dashboards.
-sys::install_manifest::default::dashboard1_name			=	an-striker01
-sys::install_manifest::default::dashboard1_bcn_ip		=	10.20.4.1
-sys::install_manifest::default::dashboard1_ifn_ip		=	10.255.4.1
-sys::install_manifest::default::dashboard2_name			=	an-striker02
-sys::install_manifest::default::dashboard2_bcn_ip		=	10.20.4.2
-sys::install_manifest::default::dashboard2_ifn_ip		=	10.255.4.2
+#sys::install_manifest::default::dashboard1_name			=	an-striker01
+#sys::install_manifest::default::dashboard1_bcn_ip		=	10.20.4.1
+#sys::install_manifest::default::dashboard1_ifn_ip		=	10.255.4.1
+#sys::install_manifest::default::dashboard2_name			=	an-striker02
+#sys::install_manifest::default::dashboard2_bcn_ip		=	10.20.4.2
+#sys::install_manifest::default::dashboard2_ifn_ip		=	10.255.4.2
 
 # These two sections allow for controlling the default values assigned to 
 # nodes 1 and 2. Of most important note are the pdu outlet definitions. 
 # Generally, these options should not be set so that the web interface is
 # allowed to create sensible defaults.
 # Node 1
-sys::install_manifest::default::node1_name			=	
-sys::install_manifest::default::node1_bcn_ip			=	
-sys::install_manifest::default::node1_ipmi_ip			=	
-sys::install_manifest::default::node1_sn_ip			=	
-sys::install_manifest::default::node1_ifn_ip			=	
-sys::install_manifest::default::node1_pdu1_outlet		=	
-sys::install_manifest::default::node1_pdu2_outlet		=	
-sys::install_manifest::default::node1_pdu3_outlet		=	
-sys::install_manifest::default::node1_pdu4_outlet		=	
+#sys::install_manifest::default::node1_name			=	
+#sys::install_manifest::default::node1_bcn_ip			=	
+#sys::install_manifest::default::node1_ipmi_ip			=	
+#sys::install_manifest::default::node1_sn_ip			=	
+#sys::install_manifest::default::node1_ifn_ip			=	
+#sys::install_manifest::default::node1_pdu1_outlet		=	
+#sys::install_manifest::default::node1_pdu2_outlet		=	
+#sys::install_manifest::default::node1_pdu3_outlet		=	
+#sys::install_manifest::default::node1_pdu4_outlet		=	
 
 # Node 2
-sys::install_manifest::default::node2_name			=	
-sys::install_manifest::default::node2_bcn_ip			=	
-sys::install_manifest::default::node2_ipmi_ip			=	
-sys::install_manifest::default::node2_sn_ip			=	
-sys::install_manifest::default::node2_ifn_ip			=	
-sys::install_manifest::default::node2_pdu1_outlet		=	
-sys::install_manifest::default::node2_pdu2_outlet		=	
-sys::install_manifest::default::node2_pdu3_outlet		=	
-sys::install_manifest::default::node2_pdu4_outlet		=	
+#sys::install_manifest::default::node2_name			=	
+#sys::install_manifest::default::node2_bcn_ip			=	
+#sys::install_manifest::default::node2_ipmi_ip			=	
+#sys::install_manifest::default::node2_sn_ip			=	
+#sys::install_manifest::default::node2_ifn_ip			=	
+#sys::install_manifest::default::node2_pdu1_outlet		=	
+#sys::install_manifest::default::node2_pdu2_outlet		=	
+#sys::install_manifest::default::node2_pdu3_outlet		=	
+#sys::install_manifest::default::node2_pdu4_outlet		=	
 
 ### These values control what Install Manifest fields are displayed or hidden.
 # Generally speaking, nothing should be hidden. In some cases though, you may
@@ -883,41 +883,41 @@ sys::install_manifest::default::node2_pdu4_outlet		=
 # can't modify it. To disable a field, set the appropriate value to '0'.
 # 
 # Primary configuration fields
-sys::install_manifest::show::prefix_field			=	1
-sys::install_manifest::show::sequence_field			=	1
-sys::install_manifest::show::domain_field			=	1
-sys::install_manifest::show::password_field			=	1
-sys::install_manifest::show::bcn_network_fields			=	1
-sys::install_manifest::show::sn_network_fields			=	1
-sys::install_manifest::show::ifn_network_fields			=	1
-sys::install_manifest::show::library_fields			=	1
-sys::install_manifest::show::pool1_fields			=	0
-sys::install_manifest::show::repository_field			=	0
+#sys::install_manifest::show::prefix_field			=	1
+#sys::install_manifest::show::sequence_field			=	1
+#sys::install_manifest::show::domain_field			=	1
+#sys::install_manifest::show::password_field			=	1
+#sys::install_manifest::show::bcn_network_fields			=	1
+#sys::install_manifest::show::sn_network_fields			=	1
+#sys::install_manifest::show::ifn_network_fields			=	1
+#sys::install_manifest::show::library_fields			=	1
+#sys::install_manifest::show::pool1_fields			=	0
+#sys::install_manifest::show::repository_field			=	0
 
 # Shared variables
-sys::install_manifest::show::name_field				=	1
-sys::install_manifest::show::dns_fields				=	1
-sys::install_manifest::show::ntp_fields				=	1
+#sys::install_manifest::show::name_field				=	1
+#sys::install_manifest::show::dns_fields				=	1
+#sys::install_manifest::show::ntp_fields				=	1
 
 # Foundation pack
-sys::install_manifest::show::switch_fields			=	1
-sys::install_manifest::show::ups_fields				=	1
-sys::install_manifest::show::pdu_fields				=	1
-sys::install_manifest::show::dashboard_fields			=	1
+#sys::install_manifest::show::switch_fields			=	1
+#sys::install_manifest::show::ups_fields				=	1
+#sys::install_manifest::show::pdu_fields				=	1
+#sys::install_manifest::show::dashboard_fields			=	1
 
 # Nodes 
-sys::install_manifest::show::nodes_name_field			=	1
-sys::install_manifest::show::nodes_bcn_field			=	1
-sys::install_manifest::show::nodes_ipmi_field			=	1
-sys::install_manifest::show::nodes_sn_field			=	1
-sys::install_manifest::show::nodes_ifn_field			=	1
-sys::install_manifest::show::nodes_pdu_fields			=	1
+#sys::install_manifest::show::nodes_name_field			=	1
+#sys::install_manifest::show::nodes_bcn_field			=	1
+#sys::install_manifest::show::nodes_ipmi_field			=	1
+#sys::install_manifest::show::nodes_sn_field			=	1
+#sys::install_manifest::show::nodes_ifn_field			=	1
+#sys::install_manifest::show::nodes_pdu_fields			=	1
 
 ### Runtime stuff
 # When set to '0', the results of checking for an internet connection or 
 # checking RHEL-based nodes against the Red Hat Network are suppressed.
-sys::install_manifest::show::internet_check			=       0
-sys::install_manifest::show::rhn_checks				=       0
+#sys::install_manifest::show::internet_check			=       0
+#sys::install_manifest::show::rhn_checks				=       0
 
 # Setting this to '1' switches the Install Manifest to 'Expert Mode', 
 # dramatically reducing the amount of help-text displayed beside each form
@@ -956,7 +956,7 @@ sys::server::ifn_nic_driver					=	qemu
 # 
 # This can be enables and disabled using:
 # /sbin/striker/anvil-kick-apc-ups --{enable,disable}
-sys::install_manifest::use_anvil-kick-apc-ups			=	1
+#sys::install_manifest::use_anvil-kick-apc-ups			=	1
 
 # When this is set to '1', an Anvil! node will do some sanity checks when it 
 # boots. If all is well and it can communicate with it's peer, it will start
@@ -966,7 +966,7 @@ sys::install_manifest::use_anvil-kick-apc-ups			=	1
 # 
 # This can be enables and disabled using:
 # /sbin/striker/safe_anvil_start --{enable,disable}
-sys::install_manifest::use_safe_anvil_start			=	1
+#sys::install_manifest::use_safe_anvil_start			=	1
 
 
 ###############################################################################
