* Fixed up tools/striker-configure-vmm to now work by being called from GDM's PreSession script when enabled. To facilitate enabling and disabling this tool, it now takes '--enable', '--disable' and '--force'. It is not possible to configure virt-manager when it is running, so this works around the problem by running before the user's gnome session has started. * Added '--help' to tools/striker-configure-vmm and tools/striker-push-ssh and re-enabled them in Striker. * Moved some more exectuable paths to AN::Tools->_set_paths.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -162,7 +162,13 @@ tools::safe_anvil_start::enabled	=	0
 #       who has access to the dashboard will have unfettered access to the
 #       Anvil! nodes. Enable this feature only in environments where physical
 #       access is controlled.
-tools::striker-push-ssh::enabled	=	0
+#
+tools::striker-push-ssh::enabled	=	1
+
+# Set this to '1' to have Striker automatically configure Virtual Machine 
+# Manager when new Anvil! systems are added to Striker. Note that this has no
+# effect unless 'virt-manager' is installed.
+tools::striker-configure-vmm::enabled	=	1
 
 # By default, Striker will sync with it's peer when its configuration changes
 # via the web interface. This works by looking at the 'scancore::x::host'
