* Updated the default striker.conf to not set expert_ui, disable links or specify nic drivers.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -51,7 +51,7 @@ mail_data::sending_domain	=	example.com
 # This controls how many seconds to wait before reloading the main page and
 # status pages. Set to '0' to never refresh the page. Yes, this is because we
 # suck at AJAX... Patches welcomed. ;)
-sys::reload_page_timer		=	0
+#sys::reload_page_timer		=	0
 
 # By default, the install manifest uses the standard MTU of 1500 for all
 # networks. This is not (yet) configurable in the Install Manifest menu. If you
@@ -928,24 +928,24 @@ remote-usb::enable_remote_usb_mount	=	0
 # Setting this to '1' switches the Install Manifest to 'Expert Mode', 
 # dramatically reducing the amount of help-text displayed beside each form
 # field.
-sys::expert_ui							=	1
+#sys::expert_ui							=	0
 
 # On air-gapped Anvil! systems, setting this to '1' will disable links to 
 # external sites that can't be reached in any case.
-sys::disable_links						=	1
+#sys::disable_links						=	0
 
 # This controls how many (virtual) network interfaces to use for newly 
 # provisioned servers on your Anvil!. Generally, you will not want to set this
 # as '1' is the default and sufficient for most uses.
-sys::server::nic_count						=	1
+#sys::server::nic_count						=	1
 
 # This allows you to specify the qemu network driver to use for virtual 
 # interfaces connected to the IFN, BCN or SN bridges (when they exist). In most
 # cases, only 'ifn_nic_driver' is of use. To learn more about this, see:
 # https://libvirt.org/formatdomain.html#elementsDriverBackendOptions
-sys::server::bcn_nic_driver					=	
-sys::server::sn_nic_driver					=	
-sys::server::ifn_nic_driver					=	qemu
+#sys::server::bcn_nic_driver					=	
+#sys::server::sn_nic_driver					=	
+#sys::server::ifn_nic_driver					=	qemu
 
 # Setting this to '1' enables the APC UPS watchdog timer on new Anvil! systems.
 # This feature should be enabled carefully! It causes a timer to run on the 
