* Reworked how the server delayed start function will work. The concept of "groups" was non-intuitive and have been removed. Now, a server can simply be said to start after another server on the Anvil! with a configurable delay. Setting the 'server_start_after' to a UUID that is all zeros will disable auto-booting in anvil-safe-start. Selecting which server is done via a selection box with an options for 'Do Not Boot' (which sets the all-0s UUID). * AN::Tools::DB->do_db_write() now checks to see if the new 'AN::Tools::Log->db_transactions()' is set and, if so, will log the DB transactions regardless of log levels. This is, in turn, enabled via 'X::log_db_transactions' where 'X' can be 'scancore' or one or more scan agents. Setting 'scancore' does NOT tell the agents to log their DB transactions!
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -283,8 +283,14 @@ scancore::disable::boot_nodes		=	0
 #scancore::log_level			=	1
 #scancore::log_language			=	en_CA
 #scancore::language			=	en_CA
-# 
-# The same four variables are used to configure the agents, simply substitute 
+
+# If you are hitting database problems, you can use this option to log all 
+# database writes. Note that you will need to set the similar variable for each
+# agent you want to monitor (or, just enable the DB logging if the agent giving
+# you grief).
+#scancore::log_db_transactions		=	1
+
+# The same five variables are used to configure the agents, simply substitute 
 # 'scancore' for the name of the agent. For example, to customize the IPMI
 # scan agent 'scan-ipmitool', you can use:
 # 
@@ -292,45 +298,59 @@ scancore::disable::boot_nodes		=	0
 #scan-ipmitool::log_level		=	1
 #scan-ipmitool::log_language		=	en_CA
 #scan-ipmitool::language		=	en_CA
+#scan-ipmitool::log_db_transactions	=	1
 # 
 # NOTE: The language you choose MUST exist in the XML "strings" files!
 # 
 
 # ScanCore itself:
-scancore::log_file			=	/var/log/ScanCore.log
-scancore::log_level			=	2
-scancore::log_language			=	en_CA
-scancore::language			=	en_CA
+#scancore::log_file			=	/var/log/ScanCore.log
+#scancore::log_level			=	2
+#scancore::log_language			=	en_CA
+#scancore::language			=	en_CA
+#scancore::log_db_transactions		=	0
 
 # IPMI scan agent:
-scan-ipmitool::log_file			=	/var/log/ScanCore.log
-scan-ipmitool::log_level		=	2
-scan-ipmitool::log_language		=	en_CA
-scan-ipmitool::language			=	en_CA
+#scan-ipmitool::log_file		=	/var/log/ScanCore.log
+#scan-ipmitool::log_level		=	2
+#scan-ipmitool::log_language		=	en_CA
+#scan-ipmitool::language		=	en_CA
+#scan-ipmitool::log_db_transactions	=	0
 
 # LSI/Avago RAID controller scan agent:
-scan-storcli::log_file			=	/var/log/ScanCore.log
-scan-storcli::log_level			=	2
-scan-storcli::log_language		=	en_CA
-scan-storcli::language			=	en_CA
+#scan-storcli::log_file			=	/var/log/ScanCore.log
+#scan-storcli::log_level		=	2
+#scan-storcli::log_language		=	en_CA
+#scan-storcli::language			=	en_CA
+#scan-storcli::log_db_transactions	=	0
 
 # RHEL's Resource Group manager's 'clustat' scan agent:
-scan-clustat::log_file			=	/var/log/ScanCore.log
-scan-clustat::log_level			=	2
-scan-clustat::log_language		=	en_CA
-scan-clustat::language			=	en_CA
+#scan-clustat::log_file			=	/var/log/ScanCore.log
+#scan-clustat::log_level		=	2
+#scan-clustat::log_language		=	en_CA
+#scan-clustat::language			=	en_CA
+#scan-clustat::log_db_transactions	=	0
 
 # Linux bond driver scan agent:
-scan-bond::log_file			=	/var/log/ScanCore.log
-scan-bond::log_level			=	2
-scan-bond::log_language		=	en_CA
-scan-bond::language			=	en_CA
+#scan-bond::log_file			=	/var/log/ScanCore.log
+#scan-bond::log_level			=	2
+#scan-bond::log_language		=	en_CA
+#scan-bond::language			=	en_CA
+#scan-bond::log_db_transactions		=	0
 
 # APC/Schneider brand SNMP UPS scan agent:
-scan-apc-ups::log_file			=	/var/log/ScanCore.log
-scan-apc-ups::log_level			=	2
-scan-apc-ups::log_language		=	en_CA
-scan-apc-ups::language			=	en_CA
+#scan-apc-ups::log_file			=	/var/log/ScanCore.log
+#scan-apc-ups::log_level		=	2
+#scan-apc-ups::log_language		=	en_CA
+#scan-apc-ups::language			=	en_CA
+#scan-apc-ups::log_db_transactions	=	0
+
+# KVM/QEMU virtual machine scan agent:
+#scan-server::log_file			=	/var/log/ScanCore.log
+#scan-server::log_level			=	2
+#scan-server::log_language		=	en_CA
+#scan-server::language			=	en_CA
+#scan-server::log_db_transactions	=	0
 
 
 ###############################
